--- a/meetings/06-rstats.qmd
+++ b/meetings/06-rstats.qmd
@@ -12,7 +12,12 @@ title: "Week 6: Intro to R and RStudio"
 
 ## Activities
 - Workshop: Intro to R
+  - [R for Social Scientists: Intro to R](https://datacarpentry.org/r-socialsci/01-intro-to-r.html)
 - Workshop: Importing data
+  - [R for Social Scientists: Starting with data](https://datacarpentry.org/r-socialsci/02-starting-with-data.html)
+  - [Download SAFI data](https://github.com/datacarpentry/r-socialsci/blob/main/episodes/data/SAFI_clean.csv)
+  - [Download letters data](https://github.com/jessesadler/intro-to-r/blob/master/data/correspondence-data-1585.csv)
+  - [Download readr example data](https://github.com/jessesadler/notes-tidyverse/blob/main/data/readr-example.csv)
 
 ## Resources
 - [Data Carpentry - R for Social Scientists](https://datacarpentry.org/r-socialsci/)
