--- a/meetings/07-wrangle.qmd
+++ b/meetings/07-wrangle.qmd
@@ -15,8 +15,14 @@ title: "Week 7: Data wrangling"
 
 ## Activities
 - Workshop: Organizing your work in projects
-- Workshop: Introduction to quarto
 - Workshop: Data wrangling
+- Workshop: Introduction to quarto
+
+## Data
+- [SAFI data](https://github.com/datacarpentry/r-socialsci/blob/main/episodes/data/SAFI_clean.csv)
+- [readr example data](https://github.com/jessesadler/notes-tidyverse/blob/main/data/readr-example.csv)
+- Lletters data](https://github.com/jessesadler/intro-to-r/blob/master/data/correspondence-data-1585.csv)
+- [Letters location data](https://github.com/jessesadler/intro-to-r/blob/master/data/locations.csv)
 
 ## Resources
 - [Data Carpentry - R for Social Scientists, Data Wrangling with dplyr](https://datacarpentry.org/r-socialsci/03-dplyr.html)
